Code/syntax.output
Terminals unused in grammar

   LOWER_THAN_RP


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ExtDecList error
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier FunDec SEMI
    9       | Specifier FunDec error
   10       | error SEMI
   11       | Specifier error
   12       | Specifier ID LP error CompSt

   13 ExtDecList: VarDec
   14           | VarDec COMMA ExtDecList

   15 Specifier: TYPE
   16          | StructSpecifier

   17 StructSpecifier: STRUCT OptTag LC DefList RC
   18                | STRUCT Tag
   19                | STRUCT OptTag LC error RC

   20 OptTag: ID
   21       | %empty

   22 Tag: ID

   23 VarDec: ID
   24       | VarDec LB INT RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | Exp error
   36     | Exp LB error SEMI
   37     | ID LP error SEMI
   38     | LP error SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | RETURN Exp error
   42     | RETURN Exp LB error SEMI
   43     | RETURN ID LP error SEMI
   44     | RETURN LP error SEMI
   45     | IF LP Exp RP Stmt
   46     | IF LP Exp RP Stmt ELSE Stmt
   47     | WHILE LP Exp RP Stmt
   48     | IF LP error RP Stmt
   49     | IF LP error RP Stmt ELSE Stmt
   50     | WHILE LP error RP Stmt
   51     | IF LP error Stmt
   52     | IF LP error Stmt ELSE Stmt
   53     | WHILE LP error Stmt
   54     | IF error RP Stmt
   55     | IF error RP Stmt ELSE Stmt
   56     | WHILE error RP Stmt

   57 DefList: Def DefList
   58        | %empty

   59 Def: Specifier DecList SEMI
   60    | Specifier DecList error
   61    | error DecList SEMI
   62    | Specifier error SEMI

   63 DecList: Dec
   64        | Dec COMMA DecList

   65 Dec: VarDec
   66    | VarDec ASSIGNOP Exp
   67    | error ASSIGNOP Exp
   68    | VarDec ASSIGNOP error

   69 Exp: Exp ASSIGNOP Exp
   70    | Exp ASSIGNOP error
   71    | Exp AND Exp
   72    | Exp AND error
   73    | Exp OR Exp
   74    | Exp OR error
   75    | Exp RELOP Exp
   76    | Exp RELOP error
   77    | Exp PLUS Exp
   78    | Exp PLUS error
   79    | Exp MINUS Exp
   80    | Exp MINUS error
   81    | Exp STAR Exp
   82    | Exp STAR error
   83    | Exp DIV Exp
   84    | Exp DIV error
   85    | LP Exp RP
   86    | LP error RP
   87    | MINUS Exp
   88    | MINUS error
   89    | NOT Exp
   90    | NOT error
   91    | ID LP Args RP
   92    | ID LP error RP
   93    | ID LP RP
   94    | Exp LB Exp RB
   95    | Exp LB error RB
   96    | Exp DOT ID
   97    | Exp DOT error
   98    | ID
   99    | INT
  100    | FLOAT

  101 Args: Exp COMMA Args
  102     | Exp
  103     | Exp COMMA error


Terminals, with rules where they appear

$end (0) 0
error (256) 5 9 10 11 12 19 27 35 36 37 38 41 42 43 44 48 49 50 51
    52 53 54 55 56 60 61 62 67 68 70 72 74 76 78 80 82 84 86 88 90
    92 95 97 103
INT (258) 24 99
FLOAT (259) 100
SEMI (260) 4 6 8 10 34 36 37 38 40 42 43 44 59 61 62
COMMA (261) 14 28 64 101 103
ASSIGNOP (262) 66 67 68 69 70
RELOP (263) 75 76
PLUS (264) 77 78
MINUS (265) 79 80 87 88
STAR (266) 81 82
DIV (267) 83 84
AND (268) 71 72
OR (269) 73 74
DOT (270) 96 97
NOT (271) 89 90
TYPE (272) 15
LP (273) 12 25 26 27 37 38 43 44 45 46 47 48 49 50 51 52 53 85 86 91
    92 93
RP (274) 25 26 27 45 46 47 48 49 50 54 55 56 85 86 91 92 93
LB (275) 24 36 42 94 95
RB (276) 24 94 95
LC (277) 17 19 31
RC (278) 17 19 31
STRUCT (279) 17 18 19
RETURN (280) 40 41 42 43 44
IF (281) 45 46 48 49 51 52 54 55
ELSE (282) 46 49 52 55
WHILE (283) 47 50 53 56
ID (284) 12 20 22 23 25 26 27 37 43 91 92 93 96 98
LOWER_THAN_ELSE (285)
LOWER_THAN_RP (286)
HIGHER_THAN_MINUS (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 2
ExtDef (36)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2
ExtDecList (37)
    on left: 13 14, on right: 4 5 14
Specifier (38)
    on left: 15 16, on right: 4 5 6 7 8 9 11 12 30 59 60 62
StructSpecifier (39)
    on left: 17 18 19, on right: 16
OptTag (40)
    on left: 20 21, on right: 17 19
Tag (41)
    on left: 22, on right: 18
VarDec (42)
    on left: 23 24, on right: 13 14 24 30 65 66 68
FunDec (43)
    on left: 25 26 27, on right: 7 8 9
VarList (44)
    on left: 28 29, on right: 25 28
ParamDec (45)
    on left: 30, on right: 28 29
CompSt (46)
    on left: 31, on right: 7 12 39
StmtList (47)
    on left: 32 33, on right: 31 32
Stmt (48)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56, on right: 32 45 46 47 48 49 50 51 52 53 54 55 56
DefList (49)
    on left: 57 58, on right: 17 31 57
Def (50)
    on left: 59 60 61 62, on right: 57
DecList (51)
    on left: 63 64, on right: 59 60 61 64
Dec (52)
    on left: 65 66 67 68, on right: 63 64
Exp (53)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 96 97 98 99 100, on right: 34 35 36
    40 41 42 45 46 47 66 67 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 87 89 94 95 96 97 101 102 103
Args (54)
    on left: 101 102 103, on right: 91 101


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   10 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   15 Specifier: TYPE .

    $default  reduce using rule 15 (Specifier)


State 3

   17 StructSpecifier: STRUCT . OptTag LC DefList RC
   18                | STRUCT . Tag
   19                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ExtDecList error
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . FunDec SEMI
    9       | Specifier . FunDec error
   11       | Specifier . error
   12       | Specifier . ID LP error CompSt

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   16 Specifier: StructSpecifier .

    $default  reduce using rule 16 (Specifier)


State 9

   10 ExtDef: error SEMI .

    $default  reduce using rule 10 (ExtDef)


State 10

   20 OptTag: ID .
   22 Tag: ID .

    LC        reduce using rule 20 (OptTag)
    $default  reduce using rule 22 (Tag)


State 11

   17 StructSpecifier: STRUCT OptTag . LC DefList RC
   19                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 12

   18 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 18 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   11 ExtDef: Specifier error .

    $default  reduce using rule 11 (ExtDef)


State 16

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 17

   12 ExtDef: Specifier ID . LP error CompSt
   23 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 22

    $default  reduce using rule 23 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI
    5       | Specifier ExtDecList . error

    error  shift, and go to state 23
    SEMI   shift, and go to state 24


State 19

   13 ExtDecList: VarDec .
   14           | VarDec . COMMA ExtDecList
   24 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 13 (ExtDecList)


State 20

    7 ExtDef: Specifier FunDec . CompSt
    8       | Specifier FunDec . SEMI
    9       | Specifier FunDec . error

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   17 StructSpecifier: STRUCT OptTag LC . DefList RC
   19                | STRUCT OptTag LC . error RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 58 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   12 ExtDef: Specifier ID LP . error CompSt
   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 23

    5 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 5 (ExtDef)


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   14 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 19


State 26

   24 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 27

    9 ExtDef: Specifier FunDec error .

    $default  reduce using rule 9 (ExtDef)


State 28

    8 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 8 (ExtDef)


State 29

   31 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 43
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 58 (DefList)
    FLOAT   reduce using rule 58 (DefList)
    MINUS   reduce using rule 58 (DefList)
    NOT     reduce using rule 58 (DefList)
    LP      reduce using rule 58 (DefList)
    LC      reduce using rule 58 (DefList)
    RC      reduce using rule 58 (DefList)
    RETURN  reduce using rule 58 (DefList)
    IF      reduce using rule 58 (DefList)
    WHILE   reduce using rule 58 (DefList)
    ID      reduce using rule 58 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 34


State 30

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 31

   19 StructSpecifier: STRUCT OptTag LC error . RC
   61 Def: error . DecList SEMI

    error  shift, and go to state 45
    RC     shift, and go to state 46
    ID     shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 32

   59 Def: Specifier . DecList SEMI
   60    | Specifier . DecList error
   62    | Specifier . error SEMI

    error  shift, and go to state 50
    ID     shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 51
    Dec      go to state 49


State 33

   17 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 52


State 34

   57 DefList: Def . DefList

    error   shift, and go to state 43
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 58 (DefList)
    FLOAT   reduce using rule 58 (DefList)
    MINUS   reduce using rule 58 (DefList)
    NOT     reduce using rule 58 (DefList)
    LP      reduce using rule 58 (DefList)
    LC      reduce using rule 58 (DefList)
    RC      reduce using rule 58 (DefList)
    RETURN  reduce using rule 58 (DefList)
    IF      reduce using rule 58 (DefList)
    WHILE   reduce using rule 58 (DefList)
    ID      reduce using rule 58 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 34


State 35

   12 ExtDef: Specifier ID LP error . CompSt
   27 FunDec: ID LP error . RP

    RP  shift, and go to state 54
    LC  shift, and go to state 29

    CompSt  go to state 55


State 36

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 37

   30 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 56


State 38

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 39

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .

    COMMA  shift, and go to state 58

    $default  reduce using rule 29 (VarList)


State 40

   23 VarDec: ID .

    $default  reduce using rule 23 (VarDec)


State 41

   14 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 14 (ExtDecList)


State 42

   24 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 43

   61 Def: error . DecList SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 44

   31 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 29
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    ID      shift, and go to state 68

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 45

   67 Dec: error . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 73


State 46

   19 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 19 (StructSpecifier)


State 47

   24 VarDec: VarDec . LB INT RB
   65 Dec: VarDec .
   66    | VarDec . ASSIGNOP Exp
   68    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 26

    $default  reduce using rule 65 (Dec)


State 48

   61 Def: error DecList . SEMI

    SEMI  shift, and go to state 75


State 49

   63 DecList: Dec .
   64        | Dec . COMMA DecList

    COMMA  shift, and go to state 76

    $default  reduce using rule 63 (DecList)


State 50

   62 Def: Specifier error . SEMI
   67 Dec: error . ASSIGNOP Exp

    SEMI      shift, and go to state 77
    ASSIGNOP  shift, and go to state 73


State 51

   59 Def: Specifier DecList . SEMI
   60    | Specifier DecList . error

    error  shift, and go to state 78
    SEMI   shift, and go to state 79


State 52

   17 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 17 (StructSpecifier)


State 53

   57 DefList: Def DefList .

    $default  reduce using rule 57 (DefList)


State 54

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


State 55

   12 ExtDef: Specifier ID LP error CompSt .

    $default  reduce using rule 12 (ExtDef)


State 56

   24 VarDec: VarDec . LB INT RB
   30 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 30 (ParamDec)


State 57

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 58

   28 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 80
    ParamDec         go to state 39


State 59

   24 VarDec: VarDec LB INT RB .

    $default  reduce using rule 24 (VarDec)


State 60

   99 Exp: INT .

    $default  reduce using rule 99 (Exp)


State 61

  100 Exp: FLOAT .

    $default  reduce using rule 100 (Exp)


State 62

   87 Exp: MINUS . Exp
   88    | MINUS . error

    error  shift, and go to state 81
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 82
    ID     shift, and go to state 83

    Exp  go to state 84


State 63

   89 Exp: NOT . Exp
   90    | NOT . error

    error  shift, and go to state 85
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 82
    ID     shift, and go to state 83

    Exp  go to state 86


State 64

   38 Stmt: LP . error SEMI
   85 Exp: LP . Exp RP
   86    | LP . error RP

    error  shift, and go to state 87
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 82
    ID     shift, and go to state 83

    Exp  go to state 88


State 65

   40 Stmt: RETURN . Exp SEMI
   41     | RETURN . Exp error
   42     | RETURN . Exp LB error SEMI
   43     | RETURN . ID LP error SEMI
   44     | RETURN . LP error SEMI

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 89
    ID     shift, and go to state 90

    Exp  go to state 91


State 66

   45 Stmt: IF . LP Exp RP Stmt
   46     | IF . LP Exp RP Stmt ELSE Stmt
   48     | IF . LP error RP Stmt
   49     | IF . LP error RP Stmt ELSE Stmt
   51     | IF . LP error Stmt
   52     | IF . LP error Stmt ELSE Stmt
   54     | IF . error RP Stmt
   55     | IF . error RP Stmt ELSE Stmt

    error  shift, and go to state 92
    LP     shift, and go to state 93


State 67

   47 Stmt: WHILE . LP Exp RP Stmt
   50     | WHILE . LP error RP Stmt
   53     | WHILE . LP error Stmt
   56     | WHILE . error RP Stmt
